--- a/GoodEditor/imgui.ini
+++ b/GoodEditor/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=92,28
 Size=400,400
 Collapsed=0
 
@@ -9,10 +9,10 @@ Size=87,54
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,0
-Size=1920,991
+Pos=962,0
+Size=958,991
 Collapsed=0
-DockId=0x7C6B3D9B,0
+DockId=0x00000002,0
 
 [Window][Example: Assets Browser]
 Pos=60,60
@@ -29,8 +29,12 @@ Size=1920,991
 Collapsed=0
 
 [Window][WindowOverViewport_11111111]
-Pos=0,0
-Size=1920,991
+Size=1200,800
+Collapsed=0
+
+[Window][Load Project]
+Pos=219,129
+Size=716,344
 Collapsed=0
 
 [Table][0xDDC24BCA,2]
@@ -38,6 +42,7 @@ RefScale=13
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace ID=0x3BC79352 Pos=0,48 Size=1920,972 CentralNode=1
-DockSpace ID=0x7C6B3D9B Window=0xA87D555D Pos=0,29 Size=1920,991 CentralNode=1 Selected=0xE87781F4
+DockSpace   ID=0x7C6B3D9B Pos=336,90 Size=1200,800 Split=X Selected=0xE87781F4
+  DockNode  ID=0x00000001 Parent=0x7C6B3D9B SizeRef=960,991 CentralNode=1
+  DockNode  ID=0x00000002 Parent=0x7C6B3D9B SizeRef=958,991 Selected=0xE87781F4
 
