--- a/GoodEditor/imgui.ini
+++ b/GoodEditor/imgui.ini
@@ -9,18 +9,19 @@ Size=87,54
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=962,0
-Size=958,991
+Pos=587,45
+Size=513,505
 Collapsed=0
-DockId=0x00000002,0
 
 [Window][Example: Assets Browser]
-Pos=60,60
+ViewportPos=197,226
+ViewportId=0xBCB8E201
 Size=800,480
 Collapsed=0
 
 [Window][Example: Custom rendering]
-Pos=60,60
+ViewportPos=197,226
+ViewportId=0x3AC84485
 Size=623,414
 Collapsed=0
 
@@ -29,20 +30,44 @@ Size=1920,991
 Collapsed=0
 
 [Window][WindowOverViewport_11111111]
+Pos=0,0
 Size=1200,800
 Collapsed=0
 
 [Window][Load Project]
-Pos=219,129
-Size=716,344
+ViewportPos=644,192
+ViewportId=0x362EB55C
+Size=593,292
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=96,71
+Size=425,627
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
+
+[Window][Example: Property editor/##tree_73339443]
+IsChild=1
+Size=300,408
+
+[Window][Color window]
+Pos=77,38
+Size=485,472
 Collapsed=0
 
 [Table][0xDDC24BCA,2]
-RefScale=13
+RefScale=20
 Column 0  Sort=0v
 
+[Table][0xAC9A836A,2]
+RefScale=20
+Column 0  Width=4
+Column 1  Weight=2.0000
+
 [Docking][Data]
-DockSpace   ID=0x7C6B3D9B Pos=336,90 Size=1200,800 Split=X Selected=0xE87781F4
-  DockNode  ID=0x00000001 Parent=0x7C6B3D9B SizeRef=960,991 CentralNode=1
-  DockNode  ID=0x00000002 Parent=0x7C6B3D9B SizeRef=958,991 Selected=0xE87781F4
+DockSpace ID=0x7C6B3D9B Window=0xA87D555D Pos=268,137 Size=1200,800 CentralNode=1
 
