--- a/GoodEditor/imgui.ini
+++ b/GoodEditor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=92,28
-Size=400,400
+Pos=127,98
+Size=695,542
 Collapsed=0
 
 [Window][Test]
@@ -30,11 +30,12 @@ Size=1920,991
 Collapsed=0
 
 [Window][WindowOverViewport_11111111]
+Pos=0,0
 Size=1200,800
 Collapsed=0
 
 [Window][Load Project]
-Pos=339,123
+Pos=187,66
 Size=748,431
 Collapsed=0
 
@@ -57,6 +58,12 @@ Pos=77,38
 Size=485,472
 Collapsed=0
 
+[Window][Viewport]
+Pos=0,0
+Size=1200,397
+Collapsed=0
+DockId=0x00000001,0
+
 [Table][0xDDC24BCA,2]
 RefScale=20
 Column 0  Sort=0v
@@ -67,4 +74,7 @@ Column 0  Width=4
 Column 1  Weight=2.0000
 
 [Docking][Data]
+DockSpace   ID=0x7C6B3D9B Window=0xA87D555D Pos=201,230 Size=1200,800 Split=Y Selected=0x13926F0B
+  DockNode  ID=0x00000001 Parent=0x7C6B3D9B SizeRef=1200,397 Selected=0x13926F0B
+  DockNode  ID=0x00000002 Parent=0x7C6B3D9B SizeRef=1200,401 CentralNode=1
 
