ambient added to material, asset panel, scene panel(not finished yet), more render settings

--- a/GoodEditor/ProjectExample.json
+++ b/GoodEditor/ProjectExample.json
@@ -29,8 +29,15 @@
     },
     "Scene 2": {
       "Entities": {
-        
+
       }
+    }
+  },
+  "Assets": {
+    "Asset 1": {
+      "UUID": 349530808032850,
+      "File Path": "C:Users/Hello.png",
+      "Asset Type": "Image"
     }
   }
 }
