--- a/GoodEditor/imgui.ini
+++ b/GoodEditor/imgui.ini
@@ -9,13 +9,12 @@ Size=87,54
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=587,45
-Size=513,505
+Pos=460,114
+Size=392,505
 Collapsed=0
 
 [Window][Example: Assets Browser]
-ViewportPos=197,226
-ViewportId=0xBCB8E201
+Pos=156,156
 Size=800,480
 Collapsed=0
 
@@ -35,7 +34,7 @@ Size=1200,800
 Collapsed=0
 
 [Window][Load Project]
-Pos=187,66
+Pos=57,11
 Size=748,431
 Collapsed=0
 
@@ -59,10 +58,27 @@ Size=485,472
 Collapsed=0
 
 [Window][Viewport]
-Pos=0,0
-Size=1200,397
+Pos=605,0
+Size=595,800
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000002,0
+
+[Window][Assets]
+Pos=60,60
+Size=240,229
+Collapsed=0
+
+[Window][Scene Panel]
+Pos=0,0
+Size=603,526
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Asset Panel]
+Pos=0,528
+Size=603,272
+Collapsed=0
+DockId=0x00000004,0
 
 [Table][0xDDC24BCA,2]
 RefScale=20
@@ -74,7 +90,9 @@ Column 0  Width=4
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockSpace   ID=0x7C6B3D9B Window=0xA87D555D Pos=201,230 Size=1200,800 Split=Y Selected=0x13926F0B
-  DockNode  ID=0x00000001 Parent=0x7C6B3D9B SizeRef=1200,397 Selected=0x13926F0B
-  DockNode  ID=0x00000002 Parent=0x7C6B3D9B SizeRef=1200,401 CentralNode=1
+DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=41,70 Size=1200,800 Split=X
+  DockNode    ID=0x00000001 Parent=0x7C6B3D9B SizeRef=603,991 Split=Y Selected=0x1D09C2A5
+    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=323,652 Selected=0x1D09C2A5
+    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=323,337 Selected=0x9D571615
+  DockNode    ID=0x00000002 Parent=0x7C6B3D9B SizeRef=595,991 CentralNode=1 Selected=0x13926F0B
 
