--- a/GoodEditor/imgui.ini
+++ b/GoodEditor/imgui.ini
@@ -9,8 +9,8 @@ Size=87,54
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=460,114
-Size=392,505
+Pos=763,97
+Size=392,558
 Collapsed=0
 
 [Window][Example: Assets Browser]
@@ -34,7 +34,7 @@ Size=1200,800
 Collapsed=0
 
 [Window][Load Project]
-Pos=169,54
+Pos=100,55
 Size=748,431
 Collapsed=0
 
@@ -58,8 +58,8 @@ Size=485,472
 Collapsed=0
 
 [Window][Viewport]
-Pos=627,0
-Size=573,800
+Pos=213,0
+Size=826,800
 Collapsed=0
 DockId=0x00000002,0
 
@@ -70,15 +70,23 @@ Collapsed=0
 
 [Window][Scene Panel]
 Pos=0,0
-Size=625,526
+Size=211,800
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000001,0
 
 [Window][Asset Panel]
-Pos=0,528
-Size=625,272
+Pos=1041,0
+Size=159,800
 Collapsed=0
 DockId=0x00000004,0
+
+[Window][Dear ImGui Demo/ResizableChild_D5443E47]
+IsChild=1
+Size=341,192
+
+[Window][Dear ImGui Demo/Red_1D4E05CE]
+IsChild=1
+Size=200,100
 
 [Table][0xDDC24BCA,2]
 RefScale=20
@@ -90,9 +98,9 @@ Column 0  Width=4
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=233,262 Size=1200,800 Split=X
-  DockNode    ID=0x00000001 Parent=0x7C6B3D9B SizeRef=625,991 Split=Y Selected=0x1D09C2A5
-    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=323,652 Selected=0x1D09C2A5
-    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=323,337 Selected=0x9D571615
-  DockNode    ID=0x00000002 Parent=0x7C6B3D9B SizeRef=573,991 CentralNode=1 Selected=0x13926F0B
+DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=137,166 Size=1200,800 Split=X
+  DockNode    ID=0x00000003 Parent=0x7C6B3D9B SizeRef=1039,991 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=211,991 Selected=0x1D09C2A5
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=826,991 CentralNode=1 Selected=0x13926F0B
+  DockNode    ID=0x00000004 Parent=0x7C6B3D9B SizeRef=159,991 Selected=0x9D571615
 
