--- a/GoodEditor/imgui.ini
+++ b/GoodEditor/imgui.ini
@@ -9,8 +9,8 @@ Size=87,54
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=533,54
-Size=392,558
+Pos=688,98
+Size=307,459
 Collapsed=0
 
 [Window][Example: Assets Browser]
@@ -34,7 +34,7 @@ Size=1200,800
 Collapsed=0
 
 [Window][Load Project]
-Pos=100,55
+Pos=369,167
 Size=748,431
 Collapsed=0
 
@@ -58,8 +58,8 @@ Size=485,472
 Collapsed=0
 
 [Window][Viewport]
-Pos=426,0
-Size=613,800
+Pos=581,0
+Size=619,557
 Collapsed=0
 DockId=0x00000002,0
 
@@ -70,13 +70,13 @@ Collapsed=0
 
 [Window][Scene Panel]
 Pos=0,0
-Size=424,800
+Size=579,557
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Asset Panel]
-Pos=1041,0
-Size=159,800
+Pos=0,559
+Size=1200,241
 Collapsed=0
 DockId=0x00000004,0
 
@@ -98,9 +98,9 @@ Column 0  Width=4
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=105,134 Size=1200,800 Split=X
-  DockNode    ID=0x00000003 Parent=0x7C6B3D9B SizeRef=1039,991 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=424,991 Selected=0x1D09C2A5
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=613,991 CentralNode=1 Selected=0x13926F0B
-  DockNode    ID=0x00000004 Parent=0x7C6B3D9B SizeRef=159,991 Selected=0x9D571615
+DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=105,134 Size=1200,800 Split=Y
+  DockNode    ID=0x00000003 Parent=0x7C6B3D9B SizeRef=1920,557 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=579,991 Selected=0x1D09C2A5
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1339,991 CentralNode=1 Selected=0x13926F0B
+  DockNode    ID=0x00000004 Parent=0x7C6B3D9B SizeRef=1920,241 Selected=0x9D571615
 
