--- a/GoodEditor/imgui.ini
+++ b/GoodEditor/imgui.ini
@@ -9,8 +9,8 @@ Size=87,54
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=394,330
-Size=307,459
+Pos=408,572
+Size=796,276
 Collapsed=0
 
 [Window][Example: Assets Browser]
@@ -30,11 +30,12 @@ Collapsed=0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,0
-Size=1200,800
+Size=1920,991
 Collapsed=0
 
 [Window][Load Project]
-Pos=296,94
+ViewportPos=191,18
+ViewportId=0x362EB55C
 Size=748,431
 Collapsed=0
 
@@ -59,7 +60,7 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=404,0
-Size=796,557
+Size=1516,748
 Collapsed=0
 DockId=0x00000002,0
 
@@ -70,13 +71,13 @@ Collapsed=0
 
 [Window][Scene Panel]
 Pos=0,0
-Size=402,557
+Size=402,748
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Asset Panel]
-Pos=0,559
-Size=1200,241
+Pos=0,750
+Size=1920,241
 Collapsed=0
 DockId=0x00000004,0
 
@@ -98,7 +99,7 @@ Column 0  Width=4
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=137,166 Size=1200,800 Split=Y
+DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=0,29 Size=1920,991 Split=Y
   DockNode    ID=0x00000003 Parent=0x7C6B3D9B SizeRef=1920,557 Split=X
     DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=402,991 Selected=0x1D09C2A5
     DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=796,991 CentralNode=1 Selected=0x13926F0B
