--- a/GoodEditor/ProjectExample.json
+++ b/GoodEditor/ProjectExample.json
@@ -1,7 +1,7 @@
 {
   "Project Name": "Sandbox",
   "Project Directory": "D:\\Dev\\TooGoodEngine-NEA\\GoodEditor",
-  "Last Build Date": "2024-08-09 19:07:16",
+  "Last Build Date": "2024-08-12 11:21:26",
   "Scenes": {
     "Scene 1": {
       "Entities": {
@@ -10,7 +10,7 @@
             "Position": [
               0.10000000149011612,
               0.0,
-              1.0
+              1.2999999523162842
             ],
             "Scale": [
               0.5,
@@ -18,45 +18,117 @@
               1.0
             ],
             "Rotation": [
-              6.400000095367432,
-              1.1754943508222875e-38,
-              1.0
+              -2.9000000953674316,
+              -352.5,
+              -2.200000047683716
             ]
           },
           "Mesh": "##Quad",
           "Material": {
-            "Ambient": [ 0.0, 0.0, 0.0, 1.0 ],
-            "Albedo": [ 1.0, 1.0, 1.0, 1.0 ],
-            "Metallic": [ 0.0, 0.0, 0.0, 1.0 ],
-            "Emission": [ 0.0, 0.0, 0.0, 0.0 ],
-            "Roughness": 1.0,
-            "Albedo Factor": 1.0,
-            "Metallic Factor": 1.0,
-            "Emission Factor": 0.0
+            "Ambient Image": "D:\\Dev\\TooGoodEngine-NEA\\GoodEditor\\Assets\\plywood_diff_1k.png",
+            "Ambient": [
+              0.9679715037345886,
+              0.9679715037345886,
+              0.9679715037345886,
+              1.0
+            ],
+            "Albedo": [
+              1.0,
+              0.836298942565918,
+              0.836298942565918,
+              1.0
+            ],
+            "Albedo Factor": 0.029999999329447746,
+            "Metallic": [
+              1.0,
+              1.0,
+              1.0,
+              1.0
+            ],
+            "Metallic Factor": 0.0,
+            "Emission": [
+              0.0,
+              0.0,
+              0.0,
+              0.8600000143051147
+            ],
+            "Emission Factor": 0.0,
+            "Roughness": 0.0
+          },
+          "PointLight": {
+            "Color": [
+              0.900355875492096,
+              0.0,
+              0.0,
+              1.0
+            ],
+            "Position": [
+              0.20000000298023224,
+              0.0,
+              5.900000095367432
+            ],
+            "Radius": 112.9000015258789,
+            "Intensity": 146.6999969482422
           }
         },
         "Entity 2": {
           "Children": [
-            0
+            "Entity 1"
           ],
           "Transform": {
             "Position": [
-              1.100000023841858,
-              -5.877471754111438e-39,
-              1.2000000476837158
+              0.0,
+              0.0,
+              9.0
             ],
             "Scale": [
-              1.2999999523162842,
-              1.600000023841858,
-              3.200000047683716
+              10.899999618530273,
+              9.100000381469727,
+              1.600000023841858
             ],
             "Rotation": [
-              6.900000095367432,
-              170.89999389648438,
-              472.70001220703125
+              -18.100000381469727,
+              0.0,
+              359.6000061035156
             ]
           },
-          "Mesh": "##Quad"
+          "Mesh": "##Quad",
+          "Material": {
+            "Ambient Image": "D:\\Dev\\TooGoodEngine-NEA\\GoodEditor\\Assets\\Untitled.png",
+            "Ambient": [
+              0.0,
+              0.8067274689674377,
+              0.871886134147644,
+              1.0
+            ],
+            "Albedo": [
+              1.0,
+              0.982206404209137,
+              0.982206404209137,
+              1.0
+            ],
+            "Albedo Factor": 7.610000133514404,
+            "Metallic": [
+              0.0,
+              0.0,
+              0.0,
+              1.0
+            ],
+            "Metallic Factor": 0.0,
+            "Emission": [
+              0.0,
+              0.0,
+              0.0,
+              1.0
+            ],
+            "Emission Factor": 0.0,
+            "Roughness": 1.0
+          },
+          "Directional Light": {
+            "Color": [ 0.0, 0.0, 1.0, 1.0 ],
+            "Direction": [ 0.0, 0.0, 1.0 ],
+            "Intensity": 10.0
+          }
         }
       }
     }
