--- a/GoodEditor/imgui.ini
+++ b/GoodEditor/imgui.ini
@@ -29,12 +29,11 @@ Size=1920,991
 Collapsed=0
 
 [Window][WindowOverViewport_11111111]
-Pos=0,0
 Size=1200,800
 Collapsed=0
 
 [Window][Load Project]
-Pos=157,149
+Pos=230,104
 Size=748,431
 Collapsed=0
 
@@ -58,8 +57,8 @@ Size=485,472
 Collapsed=0
 
 [Window][Viewport]
-Pos=484,0
-Size=716,643
+Pos=468,0
+Size=732,643
 Collapsed=0
 DockId=0x00000002,0
 
@@ -69,8 +68,7 @@ Size=240,229
 Collapsed=0
 
 [Window][Scene Panel]
-Pos=0,0
-Size=482,643
+Size=466,643
 Collapsed=0
 DockId=0x00000001,0
 
@@ -98,9 +96,9 @@ Column 0  Width=4
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=233,262 Size=1200,800 Split=Y
-  DockNode    ID=0x00000003 Parent=0x7C6B3D9B SizeRef=1920,834 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=482,991 Selected=0x1D09C2A5
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=716,991 CentralNode=1 Selected=0x13926F0B
-  DockNode    ID=0x00000004 Parent=0x7C6B3D9B SizeRef=1920,155 Selected=0x9D571615
+DockSpace     ID=0x7C6B3D9B Pos=41,70 Size=1200,800 Split=Y Selected=0x13926F0B
+  DockNode    ID=0x00000003 Parent=0x7C6B3D9B SizeRef=1200,643 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=466,800 Selected=0x1D09C2A5
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=732,800 CentralNode=1 Selected=0x13926F0B
+  DockNode    ID=0x00000004 Parent=0x7C6B3D9B SizeRef=1200,155 Selected=0x9D571615
 
