--- a/GoodEditor/imgui.ini
+++ b/GoodEditor/imgui.ini
@@ -29,11 +29,12 @@ Size=1920,991
 Collapsed=0
 
 [Window][WindowOverViewport_11111111]
+Pos=0,0
 Size=1200,800
 Collapsed=0
 
 [Window][Load Project]
-Pos=230,104
+Pos=167,107
 Size=748,431
 Collapsed=0
 
@@ -57,8 +58,8 @@ Size=485,472
 Collapsed=0
 
 [Window][Viewport]
-Pos=468,0
-Size=732,643
+Pos=441,0
+Size=759,643
 Collapsed=0
 DockId=0x00000002,0
 
@@ -68,7 +69,8 @@ Size=240,229
 Collapsed=0
 
 [Window][Scene Panel]
-Size=466,643
+Pos=0,0
+Size=439,643
 Collapsed=0
 DockId=0x00000001,0
 
@@ -96,9 +98,9 @@ Column 0  Width=4
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockSpace     ID=0x7C6B3D9B Pos=41,70 Size=1200,800 Split=Y Selected=0x13926F0B
+DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=105,134 Size=1200,800 Split=Y Selected=0x13926F0B
   DockNode    ID=0x00000003 Parent=0x7C6B3D9B SizeRef=1200,643 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=466,800 Selected=0x1D09C2A5
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=732,800 CentralNode=1 Selected=0x13926F0B
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=439,800 Selected=0x1D09C2A5
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=759,800 CentralNode=1 Selected=0x13926F0B
   DockNode    ID=0x00000004 Parent=0x7C6B3D9B SizeRef=1200,155 Selected=0x9D571615
 
