simple profiling added

--- a/GoodEditor/imgui.ini
+++ b/GoodEditor/imgui.ini
@@ -34,7 +34,8 @@ Size=1200,800
 Collapsed=0
 
 [Window][Load Project]
-Pos=164,91
+ViewportPos=279,209
+ViewportId=0x362EB55C
 Size=748,431
 Collapsed=0
 
@@ -59,7 +60,7 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=441,0
-Size=759,527
+Size=527,527
 Collapsed=0
 DockId=0x00000002,0
 
@@ -76,7 +77,7 @@ DockId=0x00000001,0
 
 [Window][Asset Panel]
 Pos=0,529
-Size=1200,271
+Size=968,271
 Collapsed=0
 DockId=0x00000004,0
 
@@ -88,6 +89,12 @@ Size=341,192
 IsChild=1
 Size=200,100
 
+[Window][Statistics]
+Pos=970,0
+Size=230,800
+Collapsed=0
+DockId=0x00000006,0
+
 [Table][0xDDC24BCA,2]
 RefScale=20
 Column 0  Sort=0v
@@ -98,9 +105,11 @@ Column 0  Width=4
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=137,166 Size=1200,800 Split=Y Selected=0x13926F0B
-  DockNode    ID=0x00000003 Parent=0x7C6B3D9B SizeRef=1200,527 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=439,800 Selected=0x1D09C2A5
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=759,800 CentralNode=1 Selected=0x13926F0B
-  DockNode    ID=0x00000004 Parent=0x7C6B3D9B SizeRef=1200,271 Selected=0x9D571615
+DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=233,262 Size=1200,800 Split=X Selected=0x13926F0B
+  DockNode      ID=0x00000005 Parent=0x7C6B3D9B SizeRef=968,991 Split=Y
+    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1200,527 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=439,800 Selected=0x1D09C2A5
+      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=527,800 CentralNode=1 Selected=0x13926F0B
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1200,271 Selected=0x9D571615
+  DockNode      ID=0x00000006 Parent=0x7C6B3D9B SizeRef=230,991 Selected=0x47E8F9DC
 
