--- a/GoodEditor/ProjectExample.json
+++ b/GoodEditor/ProjectExample.json
@@ -1,8 +1,8 @@
 {
-  "Project Name": "Sandbox",
+  "Project Name": "ProjectExample",
   "Project Directory": "D:\\Dev\\TooGoodEngine-NEA\\GoodEditor",
   "Asset Directory": "D:\\Dev\\TooGoodEngine-NEA\\GoodEditor\\Assets",
-  "Last Build Date": "2024-08-14 15:07:19",
+  "Last Build Date": "2024-08-20 16:34:34",
   "Scenes": {
     "Scene 1": {
       "Scene Settings": {
@@ -12,49 +12,53 @@
         "Blending Source": 0,
         "Blending Destination": 0,
         "Filling Mode": 3,
+        "Environment Map": 9944323375055699610,
         "Level Of Detail": 0.0,
         "Gradient": 1.0,
         "Clear Color": [
-          0.23622047901153564,
-          0.1599603295326233,
-          0.1599603295326233,
+          0.6274510025978088,
+          0.4156862795352936,
+          0.4156862795352936,
           1.0
-        ]
+        ],
+        "Bloom Enabled": false,
+        "Bloom Threshold": 0.1599999964237213,
+        "Bloom Intensity": 0.6299999952316284
       },
       "Entities": {
         "Entity 1": {
           "Transform": {
             "Position": [
               0.10000000149011612,
-              0.0,
+              6.300000190734863,
               1.2999999523162842
             ],
             "Scale": [
-              0.5,
-              0.5,
+              3.700000047683716,
+              2.5999999046325684,
               1.0
             ],
             "Rotation": [
-              -2.9000000953674316,
-              -352.5,
-              -2.200000047683716
+              0.0,
+              0.0,
+              0.0
             ]
           },
           "Mesh": "##Quad",
           "Material": {
             "Ambient": [
-              0.9679715037345886,
-              0.9679715037345886,
-              0.9679715037345886,
+              0.0,
+              0.1560770571231842,
+              0.2775800824165344,
               1.0
             ],
             "Albedo": [
-              1.0,
-              0.836298942565918,
-              0.836298942565918,
+              0.8007117509841919,
+              0.12252884358167648,
+              0.12252884358167648,
               1.0
             ],
-            "Albedo Factor": 0.029999999329447746,
+            "Albedo Factor": 0.009999999776482582,
             "Metallic": [
               1.0,
               1.0,
@@ -69,22 +73,22 @@
               0.8600000143051147
             ],
             "Emission Factor": 0.0,
-            "Roughness": 1.0
+            "Roughness": 0.0
           },
           "Point Light": {
             "Color": [
-              0.900355875492096,
-              0.0,
-              0.0,
+              0.2704879641532898,
+              1.0,
+              0.028469741344451904,
               1.0
             ],
             "Position": [
               0.20000000298023224,
-              0.0,
-              5.900000095367432
+              5.699999809265137,
+              -3.4000000953674316
             ],
-            "Radius": 112.9000015258789,
-            "Intensity": 2.700000047683716
+            "Radius": 6.699999809265137,
+            "Intensity": 4.0
           }
         },
         "Entity 2": {
@@ -93,9 +97,9 @@
           ],
           "Transform": {
             "Position": [
-              0.0,
-              0.5,
-              9.0
+              -5.300000190734863,
+              2.5999999046325684,
+              -3.4000000953674316
             ],
             "Scale": [
               4.099999904632568,
@@ -103,73 +107,131 @@
               2.5999999046325684
             ],
             "Rotation": [
-              -235.3000030517578,
-              143.60000610351563,
-              536.2999877929688
+              0.0,
+              -31.100000381469727,
+              0.0
             ]
           },
           "Mesh": "##Cube",
           "Material": {
-            "Ambient Image": 7782581346362730783,
             "Ambient": [
-              0.11667787283658981,
-              0.8286183476448059,
-              0.8861209750175476,
-              1.0
+              0.0,
+              0.0,
+              0.0,
+              0.9843137264251709
             ],
+            "Albedo Image": 15661027670790162587,
             "Albedo": [
               1.0,
-              0.982206404209137,
-              0.982206404209137,
+              1.0,
+              1.0,
               1.0
             ],
-            "Albedo Factor": 6.690000057220459,
+            "Albedo Factor": 0.800000011920929,
             "Metallic": [
-              0.0,
-              0.0,
-              0.0,
+              0.5338078737258911,
+              0.4787173867225647,
+              0.4787173867225647,
               1.0
             ],
-            "Metallic Factor": 0.0,
+            "Metallic Factor": 1.0,
             "Emission": [
               0.0,
               0.0,
               0.0,
               1.0
             ],
-            "Emission Factor": 0.0,
-            "Roughness": 0.019999999552965164
+            "Emission Factor": 4.0,
+            "Roughness": 0.0
           },
           "Directional Light": {
             "Color": [
+              0.008966442197561264,
+              0.8398576378822327,
+              0.8132454752922058,
+              1.0
+            ],
+            "Direction": [
+              -1.0,
               1.0,
+              -0.12999999523162842
+            ],
+            "Intensity": 0.10000000149011612
+          }
+        },
+        "Entity3": {
+          "Transform": {
+            "Position": [
+              0.0,
+              0.0,
+              0.0
+            ],
+            "Scale": [
               1.0,
               1.0,
               1.0
             ],
-            "Direction": [
-              0.9100000262260437,
-              0.18000000715255737,
-              -0.27000001072883606
+            "Rotation": [
+              0.0,
+              0.0,
+              0.0
+            ]
+          },
+          "Material": {
+            "Ambient": [
+              0.0,
+              0.0,
+              0.0,
+              0.0
             ],
-            "Intensity": 0.5
-          }
+            "Albedo": [
+              0.0,
+              0.0,
+              0.0,
+              0.0
+            ],
+            "Albedo Factor": 0.0,
+            "Metallic": [
+              0.0,
+              0.0,
+              0.0,
+              0.0
+            ],
+            "Metallic Factor": 0.0,
+            "Emission": [
+              0.0,
+              0.0,
+              0.0,
+              0.0
+            ],
+            "Emission Factor": 0.0,
+            "Roughness": 0.0
+          },
+          "Model": 8765043499549219097
         }
       }
     }
   },
   "Assets": {
-    "7782581346362730783": {
+    "4685489096643726146": {
       "Type": "Image",
       "Path": "Untitled.png"
     },
-    "14939208089898045512": {
+    "8765043499549219097": {
+      "Type": "Model",
+      "Path": "untitled.obj"
+    },
+    "9311347687154038401": {
+      "Type": "EnvironmentMap",
+      "Path": "test.hdr"
+    },
+    "9944323375055699610": {
+      "Type": "EnvironmentMap",
+      "Path": "test1.hdr"
+    },
+    "15661027670790162587": {
       "Type": "Image",
       "Path": "plywood_diff_1k.png"
-    },
-    "15850235946479761981": {
-      "Type": "EnviormentMap",
-      "Path": "test.hdr"
     }
   }
 }
