--- a/GoodEditor/imgui.ini
+++ b/GoodEditor/imgui.ini
@@ -29,12 +29,11 @@ Size=1920,991
 Collapsed=0
 
 [Window][WindowOverViewport_11111111]
-Pos=0,0
 Size=1200,800
 Collapsed=0
 
 [Window][Load Project]
-Pos=341,123
+Pos=307,126
 Size=748,431
 Collapsed=0
 
@@ -69,7 +68,6 @@ Size=240,229
 Collapsed=0
 
 [Window][Scene Panel]
-Pos=0,0
 Size=347,586
 Collapsed=0
 DockId=0x00000001,0
@@ -94,6 +92,11 @@ Size=149,800
 Collapsed=0
 DockId=0x00000006,0
 
+[Window][Entity Name]
+Pos=507,122
+Size=277,206
+Collapsed=0
+
 [Table][0xDDC24BCA,2]
 RefScale=20
 Column 0  Sort=0v
@@ -104,7 +107,7 @@ Column 0  Width=4
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=137,166 Size=1200,800 Split=X Selected=0x13926F0B
+DockSpace       ID=0x7C6B3D9B Pos=41,70 Size=1200,800 Split=X Selected=0x13926F0B
   DockNode      ID=0x00000005 Parent=0x7C6B3D9B SizeRef=1049,991 Split=Y
     DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1200,586 Split=X
       DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=347,800 Selected=0x1D09C2A5
