--- a/Example/imgui.ini
+++ b/Example/imgui.ini
@@ -29,7 +29,8 @@ Size=1920,991
 Collapsed=0
 
 [Window][WindowOverViewport_11111111]
-Size=1920,991
+Pos=0,0
+Size=1200,800
 Collapsed=0
 
 [Window][Load Project]
@@ -58,7 +59,7 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=345,0
-Size=1307,777
+Size=587,586
 Collapsed=0
 DockId=0x00000002,0
 
@@ -68,13 +69,14 @@ Size=240,229
 Collapsed=0
 
 [Window][Scene Panel]
-Size=343,777
+Pos=0,0
+Size=343,586
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Asset Panel]
-Pos=0,779
-Size=1652,212
+Pos=0,588
+Size=932,212
 Collapsed=0
 DockId=0x00000004,0
 
@@ -87,8 +89,8 @@ IsChild=1
 Size=200,100
 
 [Window][Statistics]
-Pos=1654,0
-Size=266,991
+Pos=934,0
+Size=266,800
 Collapsed=0
 DockId=0x00000006,0
 
@@ -107,7 +109,7 @@ Column 0  Width=4
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockSpace       ID=0x7C6B3D9B Pos=0,29 Size=1920,991 Split=X Selected=0x13926F0B
+DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=137,166 Size=1200,800 Split=X Selected=0x13926F0B
   DockNode      ID=0x00000005 Parent=0x7C6B3D9B SizeRef=1652,991 Split=Y
     DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1200,586 Split=X
       DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=343,800 Selected=0x1D09C2A5
