--- a/Example/imgui.ini
+++ b/Example/imgui.ini
@@ -34,7 +34,7 @@ Size=1200,800
 Collapsed=0
 
 [Window][Load Project]
-Pos=161,14
+Pos=209,-53
 Size=748,431
 Collapsed=0
 
@@ -109,7 +109,7 @@ Column 0  Width=4
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=137,166 Size=1200,800 Split=X Selected=0x13926F0B
+DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=249,163 Size=1200,800 Split=X Selected=0x13926F0B
   DockNode      ID=0x00000005 Parent=0x7C6B3D9B SizeRef=1652,991 Split=Y
     DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1200,586 Split=X
       DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=343,800 Selected=0x1D09C2A5
