--- a/GoodEditor/imgui.ini
+++ b/GoodEditor/imgui.ini
@@ -29,7 +29,6 @@ Size=1920,991
 Collapsed=0
 
 [Window][WindowOverViewport_11111111]
-Pos=0,0
 Size=1200,800
 Collapsed=0
 
@@ -69,7 +68,6 @@ Size=240,229
 Collapsed=0
 
 [Window][Scene Panel]
-Pos=0,0
 Size=343,574
 Collapsed=0
 DockId=0x00000001,0
@@ -109,7 +107,7 @@ Column 0  Width=4
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=41,70 Size=1200,800 Split=X Selected=0x13926F0B
+DockSpace       ID=0x7C6B3D9B Pos=41,70 Size=1200,800 Split=X Selected=0x13926F0B
   DockNode      ID=0x00000005 Parent=0x7C6B3D9B SizeRef=1652,991 Split=Y
     DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1200,574 Split=X
       DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=343,800 Selected=0x1D09C2A5
