--- a/Example/imgui.ini
+++ b/Example/imgui.ini
@@ -30,11 +30,11 @@ Collapsed=0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,26
-Size=1200,774
+Size=1920,965
 Collapsed=0
 
 [Window][Load Project]
-Pos=370,133
+Pos=169,-68
 Size=796,486
 Collapsed=0
 
@@ -59,7 +59,7 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=345,26
-Size=587,548
+Size=1307,786
 Collapsed=0
 DockId=0x00000002,0
 
@@ -70,13 +70,13 @@ Collapsed=0
 
 [Window][Scene Panel]
 Pos=0,26
-Size=343,548
+Size=343,786
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Asset Panel]
-Pos=0,576
-Size=932,224
+Pos=0,814
+Size=1652,177
 Collapsed=0
 DockId=0x00000004,0
 
@@ -89,13 +89,13 @@ IsChild=1
 Size=200,100
 
 [Window][Statistics]
-Pos=934,26
-Size=266,774
+Pos=1654,26
+Size=266,965
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Entity Name]
-Pos=466,81
+Pos=41,-25
 Size=277,206
 Collapsed=0
 
@@ -109,11 +109,11 @@ Column 0  Width=4
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=316,111 Size=1200,774 Split=X Selected=0x13926F0B
+DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=0,55 Size=1920,965 Split=X Selected=0x13926F0B
   DockNode      ID=0x00000005 Parent=0x7C6B3D9B SizeRef=1652,991 Split=Y
-    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1200,574 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1200,786 Split=X
       DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=343,800 Selected=0x1D09C2A5
       DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=587,800 CentralNode=1 Selected=0x13926F0B
-    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1200,224 Selected=0x9D571615
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1200,177 Selected=0x9D571615
   DockNode      ID=0x00000006 Parent=0x7C6B3D9B SizeRef=266,991 Selected=0x47E8F9DC
 
