--- a/Runtime/imgui.ini
+++ b/Runtime/imgui.ini
@@ -59,7 +59,7 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=345,26
-Size=855,548
+Size=587,548
 Collapsed=0
 DockId=0x00000002,0
 
@@ -76,7 +76,7 @@ DockId=0x00000001,0
 
 [Window][Asset Panel]
 Pos=0,576
-Size=1200,224
+Size=932,224
 Collapsed=0
 DockId=0x00000004,0
 
@@ -92,6 +92,7 @@ Size=200,100
 Pos=934,26
 Size=266,774
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][Entity Name]
 Pos=466,81
@@ -108,9 +109,11 @@ Column 0  Width=4
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockSpace     ID=0x7C6B3D9B Pos=105,160 Size=1200,774 Split=Y Selected=0x13926F0B
-  DockNode    ID=0x00000003 Parent=0x7C6B3D9B SizeRef=1200,574 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=343,800 Selected=0x1D09C2A5
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=587,800 CentralNode=1 Selected=0x13926F0B
-  DockNode    ID=0x00000004 Parent=0x7C6B3D9B SizeRef=1200,224 Selected=0x9D571615
+DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=137,192 Size=1200,774 Split=X Selected=0x13926F0B
+  DockNode      ID=0x00000005 Parent=0x7C6B3D9B SizeRef=1652,991 Split=Y
+    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1200,574 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=343,800 Selected=0x1D09C2A5
+      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=587,800 CentralNode=1 Selected=0x13926F0B
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1200,224 Selected=0x9D571615
+  DockNode      ID=0x00000006 Parent=0x7C6B3D9B SizeRef=266,991 Selected=0x47E8F9DC
 
