--- a/GoodEditor/imgui.ini
+++ b/GoodEditor/imgui.ini
@@ -109,7 +109,7 @@ Column 0  Width=4
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockSpace       ID=0x7C6B3D9B Pos=316,111 Size=1200,774 Split=X Selected=0x13926F0B
+DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=201,256 Size=1200,774 Split=X Selected=0x13926F0B
   DockNode      ID=0x00000005 Parent=0x7C6B3D9B SizeRef=1652,991 Split=Y
     DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1200,574 Split=X
       DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=343,800 Selected=0x1D09C2A5
