can change scene camera settings, also fixed crashes when moving windows

--- a/Example/imgui.ini
+++ b/Example/imgui.ini
@@ -99,6 +99,11 @@ Pos=466,81
 Size=277,206
 Collapsed=0
 
+[Window][Scene Camera Settings]
+Pos=60,60
+Size=413,202
+Collapsed=0
+
 [Table][0xDDC24BCA,2]
 RefScale=20
 Column 0  Sort=0v
@@ -109,7 +114,7 @@ Column 0  Width=4
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=73,128 Size=1200,774 Split=X Selected=0x13926F0B
+DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=41,96 Size=1200,774 Split=X Selected=0x13926F0B
   DockNode      ID=0x00000005 Parent=0x7C6B3D9B SizeRef=1652,991 Split=Y
     DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1200,574 Split=X
       DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=343,800 Selected=0x1D09C2A5
