moved components over to the properites panel

--- a/Example/imgui.ini
+++ b/Example/imgui.ini
@@ -1,124 +1,62 @@
-[Window][Debug##Default]
-Pos=127,98
-Size=695,542
-Collapsed=0
-
-[Window][Test]
-Pos=60,60
-Size=87,54
-Collapsed=0
-
-[Window][Dear ImGui Demo]
-Pos=385,426
-Size=796,276
-Collapsed=0
-
-[Window][Example: Assets Browser]
-Pos=156,156
-Size=800,480
-Collapsed=0
-
-[Window][Example: Custom rendering]
-ViewportPos=197,226
-ViewportId=0x3AC84485
-Size=623,414
-Collapsed=0
-
-[Window][DockSpace Demo]
-Size=1920,991
-Collapsed=0
-
 [Window][WindowOverViewport_11111111]
 Pos=0,26
 Size=1200,774
 Collapsed=0
 
-[Window][Load Project]
-Pos=370,133
-Size=796,486
-Collapsed=0
-
-[Window][Dear ImGui Style Editor]
-Pos=96,71
-Size=425,627
-Collapsed=0
-
-[Window][Example: Property editor]
+[Window][Debug##Default]
 Pos=60,60
-Size=430,450
+Size=400,400
 Collapsed=0
 
-[Window][Example: Property editor/##tree_73339443]
-IsChild=1
-Size=300,408
-
-[Window][Color window]
-Pos=77,38
-Size=485,472
+[Window][Load Project]
+Pos=60,60
+Size=548,276
 Collapsed=0
 
-[Window][Viewport]
-Pos=345,26
-Size=587,548
+[Window][Asset Panel]
+Pos=288,507
+Size=661,293
 Collapsed=0
 DockId=0x00000002,0
 
-[Window][Assets]
-Pos=60,60
-Size=240,229
-Collapsed=0
-
 [Window][Scene Panel]
 Pos=0,26
-Size=343,548
+Size=286,435
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000007,0
 
-[Window][Asset Panel]
-Pos=0,576
-Size=932,224
+[Window][Statistics]
+Pos=951,26
+Size=249,774
 Collapsed=0
 DockId=0x00000004,0
 
-[Window][Dear ImGui Demo/ResizableChild_D5443E47]
-IsChild=1
-Size=341,192
-
-[Window][Dear ImGui Demo/Red_1D4E05CE]
-IsChild=1
-Size=200,100
-
-[Window][Statistics]
-Pos=934,26
-Size=266,774
+[Window][Properties]
+Pos=0,463
+Size=286,337
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000008,0
 
-[Window][Entity Name]
-Pos=466,81
-Size=277,206
+[Window][Viewport]
+Pos=288,26
+Size=661,479
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][Scene Camera Settings]
-Pos=60,60
-Size=166,98
+Pos=951,26
+Size=249,774
 Collapsed=0
-
-[Table][0xDDC24BCA,2]
-RefScale=20
-Column 0  Sort=0v
-
-[Table][0xAC9A836A,2]
-RefScale=20
-Column 0  Width=4
-Column 1  Weight=2.0000
+DockId=0x00000004,1
 
 [Docking][Data]
-DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=73,128 Size=1200,774 Split=X Selected=0x13926F0B
-  DockNode      ID=0x00000005 Parent=0x7C6B3D9B SizeRef=1652,991 Split=Y
-    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1200,574 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=343,800 Selected=0x1D09C2A5
-      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=587,800 CentralNode=1 Selected=0x13926F0B
-    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1200,224 Selected=0x9D571615
-  DockNode      ID=0x00000006 Parent=0x7C6B3D9B SizeRef=266,991 Selected=0x47E8F9DC
+DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=201,256 Size=1200,774 Split=X
+  DockNode      ID=0x00000005 Parent=0x7C6B3D9B SizeRef=286,774 Split=Y Selected=0x1D09C2A5
+    DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=286,435 Selected=0x1D09C2A5
+    DockNode    ID=0x00000008 Parent=0x00000005 SizeRef=286,337 Selected=0x199AB496
+  DockNode      ID=0x00000006 Parent=0x7C6B3D9B SizeRef=912,774 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=661,774 Split=Y
+      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1200,479 CentralNode=1 Selected=0x13926F0B
+      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1200,293 Selected=0x9D571615
+    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=249,774 Selected=0xB9CC8FC6
 
