can now open files with their default app, moved all platform specific stuff into a platform class

--- a/Example/imgui.ini
+++ b/Example/imgui.ini
@@ -9,7 +9,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Load Project]
-Pos=60,60
+Pos=429,51
 Size=548,276
 Collapsed=0
 
@@ -21,7 +21,7 @@ DockId=0x00000002,0
 
 [Window][Scene Panel]
 Pos=0,26
-Size=286,435
+Size=286,467
 Collapsed=0
 DockId=0x00000007,0
 
@@ -32,8 +32,8 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Properties]
-Pos=0,463
-Size=286,337
+Pos=0,495
+Size=286,305
 Collapsed=0
 DockId=0x00000008,0
 
@@ -50,13 +50,13 @@ Collapsed=0
 DockId=0x00000004,1
 
 [Docking][Data]
-DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=201,256 Size=1200,774 Split=X
+DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=506,183 Size=1200,774 Split=X
   DockNode      ID=0x00000005 Parent=0x7C6B3D9B SizeRef=286,774 Split=Y Selected=0x1D09C2A5
-    DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=286,435 Selected=0x1D09C2A5
-    DockNode    ID=0x00000008 Parent=0x00000005 SizeRef=286,337 Selected=0x199AB496
+    DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=286,467 Selected=0x1D09C2A5
+    DockNode    ID=0x00000008 Parent=0x00000005 SizeRef=286,305 Selected=0x199AB496
   DockNode      ID=0x00000006 Parent=0x7C6B3D9B SizeRef=912,774 Split=X
     DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=661,774 Split=Y
       DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1200,479 CentralNode=1 Selected=0x13926F0B
       DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1200,293 Selected=0x9D571615
-    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=249,774 Selected=0xB9CC8FC6
+    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=249,774 Selected=0x47E8F9DC
 
