--- a/GoodEditor/imgui.ini
+++ b/GoodEditor/imgui.ini
@@ -50,7 +50,7 @@ Collapsed=0
 DockId=0x00000004,1
 
 [Docking][Data]
-DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=201,256 Size=1199,774 Split=X
+DockSpace       ID=0x7C6B3D9B Pos=201,256 Size=1199,774 Split=X
   DockNode      ID=0x00000005 Parent=0x7C6B3D9B SizeRef=286,774 Split=Y Selected=0x1D09C2A5
     DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=286,467 Selected=0x1D09C2A5
     DockNode    ID=0x00000008 Parent=0x00000005 SizeRef=286,305 Selected=0x199AB496
