removing useless variable

--- a/Example/imgui.ini
+++ b/Example/imgui.ini
@@ -9,7 +9,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Load Project]
-Pos=429,51
+Pos=60,60
 Size=548,276
 Collapsed=0
 
@@ -50,7 +50,7 @@ Collapsed=0
 DockId=0x00000004,1
 
 [Docking][Data]
-DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=506,183 Size=1200,774 Split=X
+DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=137,192 Size=1200,774 Split=X
   DockNode      ID=0x00000005 Parent=0x7C6B3D9B SizeRef=286,774 Split=Y Selected=0x1D09C2A5
     DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=286,467 Selected=0x1D09C2A5
     DockNode    ID=0x00000008 Parent=0x00000005 SizeRef=286,305 Selected=0x199AB496
@@ -58,5 +58,5 @@ DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=506,183 Size=1200,774 Split=
     DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=661,774 Split=Y
       DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1200,479 CentralNode=1 Selected=0x13926F0B
       DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1200,293 Selected=0x9D571615
-    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=249,774 Selected=0x47E8F9DC
+    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=249,774 Selected=0xB9CC8FC6
 
