fixed model assets textures not loading in properly

--- a/GoodEditor/imgui.ini
+++ b/GoodEditor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][WindowOverViewport_11111111]
 Pos=0,26
-Size=1199,774
+Size=1200,774
 Collapsed=0
 
 [Window][Debug##Default]
@@ -15,7 +15,7 @@ Collapsed=0
 
 [Window][Asset Panel]
 Pos=288,507
-Size=660,293
+Size=661,293
 Collapsed=0
 DockId=0x00000002,0
 
@@ -26,7 +26,7 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Statistics]
-Pos=950,26
+Pos=951,26
 Size=249,774
 Collapsed=0
 DockId=0x00000004,0
@@ -39,18 +39,23 @@ DockId=0x00000008,0
 
 [Window][Viewport]
 Pos=288,26
-Size=660,479
+Size=661,479
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Scene Camera Settings]
-Pos=950,26
+Pos=951,26
 Size=249,774
 Collapsed=0
 DockId=0x00000004,1
 
+[Window][Entity Name]
+Pos=60,60
+Size=338,232
+Collapsed=0
+
 [Docking][Data]
-DockSpace       ID=0x7C6B3D9B Pos=201,256 Size=1199,774 Split=X
+DockSpace       ID=0x7C6B3D9B Pos=73,128 Size=1200,774 Split=X
   DockNode      ID=0x00000005 Parent=0x7C6B3D9B SizeRef=286,774 Split=Y Selected=0x1D09C2A5
     DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=286,467 Selected=0x1D09C2A5
     DockNode    ID=0x00000008 Parent=0x00000005 SizeRef=286,305 Selected=0x199AB496
@@ -58,5 +63,5 @@ DockSpace       ID=0x7C6B3D9B Pos=201,256 Size=1199,774 Split=X
     DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=661,774 Split=Y
       DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1200,479 CentralNode=1 Selected=0x13926F0B
       DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1200,293 Selected=0x9D571615
-    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=249,774 Selected=0x47E8F9DC
+    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=249,774 Selected=0xB9CC8FC6
 
