--- a/Example/imgui.ini
+++ b/Example/imgui.ini
@@ -49,8 +49,13 @@ Size=249,774
 Collapsed=0
 DockId=0x00000004,1
 
+[Window][Entity Name]
+Pos=60,60
+Size=338,232
+Collapsed=0
+
 [Docking][Data]
-DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=137,192 Size=1200,774 Split=X
+DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=233,288 Size=1200,774 Split=X
   DockNode      ID=0x00000005 Parent=0x7C6B3D9B SizeRef=286,774 Split=Y Selected=0x1D09C2A5
     DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=286,467 Selected=0x1D09C2A5
     DockNode    ID=0x00000008 Parent=0x00000005 SizeRef=286,305 Selected=0x199AB496
